clusters/nishir/components/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    tailscale.com/proxy-class: longhorn
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: longhorn-frontend
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - nishir-longhorn
